--- a/_data/settings.yaml
+++ b/_data/settings.yaml
@@ -17,7 +17,7 @@ metadata:
     - Canon R7 + Canon RF 15-35mm f2.8 L
     - Yashica 635 + Ilford HP5 / Kodak Gold
   # footer contact email
-  site_email: tom@thewigleys.com
+  site_email: tom@thewigleys.uk
   # footer social link (the social title is defined in the i18n section)
   site_social_url: 'https://www.instagram.com/tomandarnie/'
   # SVG image used for sharing/bookmark icons
